# fastapi-template

./: .env  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  middleware.py
backend/scripts/: start-dev.sh
postgresql/: Dockerfile  create-multiple-postgresql-databases.sh
