[tool.poetry]
name = "ai-backend"
version = "0.1.0"
description = "AI service FastAPI backend"
authors = ["Nicholas Cecere <nicholas.cecere@ufl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.24"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
psycopg2-binary = "^2.9.9"
uvloop = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
